# CVtailro

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  SECURITY_AUDIT.md  SETUP.md  TESTING.md  WORKFLOW_REVIEW.md  admin_config.py  analytics.py  app.py  ats_checker.py  auth.py  base_agent.py  config.py  database.py  dev_resume.txt  docker-compose.yml  docx_generator.py  email_templates.py  jd_extractor.py  keyword_density.py  models.py  orchestrator.py  pdf_generator.py  pyproject.toml  railway.toml  requirements.txt  resume_quality.py  saved_resumes_api.py  similarity.py  storage.py  utils.py  wsgi.py
.github/workflows/: ci.yml
.superdesign/: design-system.md
.superdesign/init/: components.md  layouts.md  (+4 more)
agents/: __init__.py  ats_optimiser.py  bullet_optimiser.py  cover_letter.py  final_assembly.py  gap_analysis.py  job_intelligence.py  recruiter_optimiser.py  resume_optimiser.py  resume_parser.py
app/: __init__.py  extensions.py  middleware.py  settings.py
docs/: blog_admin.md
instance/: cvtailro_dev.db
prompts/: ats_optimiser.txt  bullet_optimiser.txt  cover_letter.txt  final_assembly.txt  gap_analysis.txt  job_intelligence.txt  recruiter_optimiser.txt  resume_optimiser.txt  resume_parser.txt
static/: blog.css  keyword-highlight.js
templates/: admin.html  contact.html  docs.html  index.html  pricing.html  privacy.html  terms.html
tests/: conftest.py  test_api.py  test_auth.py  test_email_auth.py  test_health.py  test_observability.py  test_resume_quality.py  test_security.py  test_similarity.py
(+105 files in other folders)
